Upgrade libraries to latest and create common-userprofile