@@ -2,6 +2,7 @@ package tech.corefinance.common.context;
 
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.i18n.LocaleContext;
 import org.springframework.context.i18n.SimpleTimeZoneAwareLocaleContext;
@@ -14,21 +15,22 @@ import java.util.Locale;
 @Slf4j
 public class StatelessLocaleResolver extends AbstractLocaleContextResolver implements LocaleResolver {
 
+    @SuppressWarnings("NullableProblems")
     @Override
     public LocaleContext resolveLocaleContext(HttpServletRequest request) {
         var localeKey = request.getHeader(CommonConstants.LANGUAGE_HEADER_KEY);
         if (localeKey == null) {
-        	localeKey = CommonConstants.DEFAULT_LANGUAGE_HEADER;
+            localeKey = CommonConstants.DEFAULT_LANGUAGE_HEADER;
             log.debug("No local in header, used to default locale [{}]", localeKey);
         } else {
             log.debug("Resolved local in header [{}]", localeKey);
         }
-        Locale locale = new Locale(localeKey);
+        Locale locale = Locale.of(localeKey);
         return new SimpleTimeZoneAwareLocaleContext(locale, getDefaultTimeZone());
     }
 
     @Override
-    public void setLocaleContext(HttpServletRequest request, HttpServletResponse response, LocaleContext localeContext) {
+    public void setLocaleContext(@NonNull HttpServletRequest request, HttpServletResponse response, LocaleContext localeContext) {
         // DO nothing because we don't keep state.
     }
 
